syntax = "proto3";
package api.orgSet;

option go_package = "api/orgSet;orgSet";
option java_multiple_files = true;
option java_package = "api.orgSet";


message GetOrgConfRequest {
	int64 orgId = 1;
} 

message SetOrgConfRequest {
	int64 orgId = 1;
	map<string,bytes> values = 2;
} 

message GetOrgConfResponse {
	string shortName = 1;
	int32 schoolYear = 2;
	bytes stageList = 3;
	string portalLogoUrl = 4;
	string managementName = 5;
	string managementLogoUrl = 6;
	bytes streamInfo = 7;
	int32 teachGroupShowType = 8;
	bytes teachActivityFunc = 9;
	int32 handDeviceSupport = 10;
	int32 portalLoginRequired = 11;
	int32 classScheduleCreateBoard = 12;
	int32 scheduleDisplayAll = 13;
	map<string, bool> clientModule = 14;
	int32 scheduleCreateLiveclass = 15;
	int32 scheduleCreateLiveclassType = 16;
	string orgName = 17;
	int64 levelTypeId = 18;
}

message SetOrgConfResponse {
	string success = 1;
}


service OrgConf {
	// 获取后台配置
	rpc GetOrgConf (GetOrgConfRequest) returns (GetOrgConfResponse);
	// 设置后台配置
	rpc SetOrgConf (SetOrgConfRequest) returns (SetOrgConfResponse);
}
